--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="btnAddMainCategory">Add Main Category</string>
+    <string name="txtItemLabel">Label</string>
+    <string name="enter_cat_label">Enter Category Label</string>
+
 </resources>
