Adding the functionality to store a picture URI belonging to a category into the db.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="btnAddMainCategory">Add Main Category</string>
     <string name="txtItemLabel">Label</string>
     <string name="enter_cat_label">Enter Category Label</string>
+    <string name="choose_cat_img">Choose Category Image</string>
 
 </resources>
