--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="txtItemLabel">Label</string>
     <string name="enter_cat_label">Enter Category Label</string>
     <string name="choose_cat_img">Choose Category Image</string>
+    <string name="btnEditSalesItem">Edit</string>
 
 </resources>
