--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="btnAddMainCategory">Add Main Category</string>
+    <string name="btnAddMainCategory">Add Category</string>
     <string name="txtItemLabel">Label</string>
     <string name="enter_cat_label">Enter Category Label</string>
     <string name="choose_cat_img">Choose Category Image</string>
     <string name="btnEditSalesItem">Edit</string>
+    <string name="lblParentCategory">Parent Category: </string>
 
 </resources>
