--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="btnAddMainCategory">Add Category</string>
+    <string name="btnSaveCategory">Save Category</string>
     <string name="txtItemLabel">Label</string>
     <string name="enter_cat_label">Enter Category Label</string>
     <string name="choose_cat_img">Choose Category Image</string>
