--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="btnEditSalesItem">Edit</string>
     <string name="lblParentCategory">Parent Category: </string>
     <string name="btnDeleteCategory">Delete Category</string>
+    <string name="btnCancel">Cancel</string>
 
 </resources>
