--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="btnDeleteCategory">Delete Category</string>
     <string name="btnCancel">Cancel</string>
 
+    <string name="title_activity_sales">SalesActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+
 </resources>
