Changed buttons to cardviews in the admin section. Introduced DB export functionality (doesn't yet work properly - only in simulator).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="btnAddToOrder">Add To Order</string>
     <string name="btnManageData">Manage Data</string>
     <string name="btnLoginPaypal">Log in to PayPal</string>
+    <string name="btnExportDB">Export Database</string>
 
     <string name="title_activity_sales">SalesActivity</string>
     <string name="btnGoToAdmin">Admin Section</string>
