--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,9 @@
     <string name="btnLoginPaypal">Log in to PayPal</string>
     <string name="btnExportDB">Export Database</string>
 
+    <string name="checkout_please_pay">Please use the card machine to pay</string>
+    <string name="checkout_print_receipt">Print receipt</string>
+
     <string name="title_activity_sales">SalesActivity</string>
     <string name="btnGoToAdmin">Admin Section</string>
     <string name="btnStartSales">Start Sales</string>
