Fixing compilation problems and starting to re-arrange PPH GUI for my needs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="ok">OK</string>
-    <string name="app_name">SelfCheckOut_WoF</string>
+    <string name="app_name">Self Checkout</string>
     <string name="title_item_detail">Item Detail</string>
     <string name="btnAddMainCategory">Add Category</string>
     <string name="btnSaveCategory">Save Category</string>
@@ -60,6 +60,7 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
 
     <!-- PPH strings -->
+    <string name="pph_storage_name">Self_Checkout</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="error_title">Error</string>
@@ -260,5 +261,7 @@
     <string name="replay_dialog_offline_mode_message">Replaying transaction in offlineMode will bring the SDK back into Online Mode.</string>
     <string name="dialog_transaction_created_title">Replaying while in Offline Mode</string>
     <string name="dialog_transaction_created_message">Replaying transaction in offlineMode will bring the SDK back into Online Mode.</string>
+
+    <string name="btnConnectToPaypal">Connect To Paypal</string>
 
 </resources>
