Adding Self Checkout Charge Activity - the form where we will be taking payment - for now mostly just a copy of PPH Charge activity. A few more nullpointer exception fixes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
 
     <string name="checkout_please_pay">Please use the card machine to pay</string>
     <string name="checkout_print_receipt">Print receipt</string>
+    <string name="checkout_pay">Pay!</string>
 
     <string name="title_activity_sales">SalesActivity</string>
     <string name="btnGoToAdmin">Admin Section</string>
