Added bar code support- first iteration. Still need to check against if product doesn't exist with the barcode, when adding it to the order and also need to explore BlueTooth bar code scanner option. Also removed the check for printer and card reader connectivity before starting sales because PPH card reader has been obsoleted and can't be authorized anymore- need to integrate IZettle reader.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="enter_item_page">Page</string>
     <string name="enter_item_multi_choice_number">Multi choice number</string>
     <string name="enter_item_description">Item Description</string>
+    <string name="enter_bar_code">Click here and scan bar code</string>
     <string name="choose_cat_img">Choose Category Image</string>
     <string name="btnEditSalesItem">Edit</string>
     <string name="btnEditMeal">Edit</string>
